# AudioPlugins

./: .gitignore  CMakeLists.txt  PLUGINS.md  README.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  plugin-request.md
chordsplitter/: CMakeLists.txt
chordsplitter/src/: PluginProcessor.cpp  PluginProcessor.h
common/: CMakeLists.txt
common/include/common/: AudioSample.hpp  Bitflag.hpp  Buffer.hpp  Looper.hpp
common/src/: Looper.cpp
indefinight/: CMakeLists.txt
indefinight/src/: PluginHelperFunc.h  PluginProcessor.cpp  PluginProcessor.h
infinight/: CMakeLists.txt
infinight/src/: PluginProcessor.cpp  PluginProcessor.h
